# CHIP-16

./: .travis.yml  CMakeLists.txt  README.md  README.txt  ROM Progess.xlsx  TODOS.txt
Chip16 Program Pack/Demos/boing/: boing.txt
Chip16 Program Pack/Demos/water/: Water.txt
Chip16 Program Pack/Demos/xor/: xor.txt
Chip16 Program Pack/Games/MegaManX16/: MegaManX16.c16  MegaManX16.txt  source.c16s
Chip16 Program Pack/Games/alien/: alien.txt
Chip16 Program Pack/Games/tetris/: tetris.c16
cmake/: FindSDL2.cmake
docs/: Chip16 v1.1 specifications.txt
docs/Chip16/: annotated.html  class_c_p_u-members.html  class_c_p_u.html  class_command_line_interface-members.html  class_command_line_interface.html  class_dynarec-members.html  class_dynarec.html  class_emitter-members.html  class_emitter.html  class_emulator-members.html  class_emulator.html  class_error.html  class_g_p_u-members.html  class_g_p_u.html  class_global_allocator.html  class_instruction-members.html  class_instruction.html  class_interpreter-members.html  class_interpreter.html  class_local_allocator-members.html  class_local_allocator.html  class_memory_arena-members.html  class_memory_arena.html  class_s_p_u-members.html  class_s_p_u.html  classes.html  commandlineinterface_8h_source.html  cpu_8h_source.html  cpu__tests_8h_source.html  dir_00a9b90e2e294d10b9470ff1b4da0d04.html  dir_024a84b870624adbfc667f9c41d2b322.html  dir_0ad498a2ae55e18f92b6e3312339f5b2.html  dir_4d5b6a07e9682775e2c30f1a7a3cccb4.html  dir_50b810848032c948c88568d5d0d57acf.html  dir_7cf32fe0440f25d952ca22821bbbb414.html  dir_9d5461a7d1880d6100b019206f514e33.html  dir_9db3a959e21d87bca6dba26c9143c915.html  dir_9e0b408b49ac4fb620ef3aaf2c877cbb.html  dir_a5a8c55fd217ce2623300e3a4c50bc2e.html  dir_bbec0803f040a9be2799c8590458b408.html  (+69 more)
docs/Chip16/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_7e.js  classes_61.js  classes_63.js  classes_64.js  classes_65.js  classes_67.js  classes_69.js  classes_6c.js  classes_6d.js  classes_73.js  classes_75.js  functions_61.js  functions_62.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_67.js  functions_69.js  functions_6a.js  functions_6c.js  (+25 more)
docs/IFT 749/: Article.tex  Proposition de projet.docx  Présentation.pptx  Résumé 15 sept-21 sept.txt  Résumé 22 sept-28 sept .txt
docs/IFT 749/Critiques/: Simulation using JIT Binary Translation Notes.txt  YETI Notes.txt
docs/IFT 749/Résumés/: 10- Résumé 17 nov au 23 nov.txt  11- Résumé 24 nov au 30 nov.txt  12- Résumé 1er déc au 7 déc.txt  13- Résumé 8 déc au 13 déc.txt  5- Résumé 13 oct au 19 oct .txt  6- Résumé 20 oct au 26 oct.txt  7- Résumé 27 oct au 2 nov.txt  8- Résumé 3 nov au 9 nov.txt  9- Résumé 10 nov au 16 nov.txt  Résumé 29 sept-5 oct.txt  Résumé 6 oct-12 oct.txt
dynarec/: dynarec.cpp
src/: CMakeLists.txt
src/AssemblerApp/: CMakeLists.txt  main.cpp
src/AssemblerLib/: CMakeLists.txt  assembler.cpp  assembler.h  emitter.cpp  emitter.h
src/AssemblerTests/: CMakeLists.txt  assembler_tests.cpp  assembler_tests.h  emitter_tests.cpp  emitter_tests.h
src/Chip16/: CMakeLists.txt  TestNewCPU.cpp  TestNewCPU.h  cpu.cpp  cpu.h  emulator.cpp  emulator.h  gpu.cpp  gpu.h  main.cpp  old_cpu.cpp  old_cpu.h  spu.cpp  spu.h  test_cpu.cpp  test_cpu.h  utils.h
src/EmulatorApp/: CMakeLists.txt  commandlineinterface.cpp  commandlineinterface.h  main.cpp
src/EmulatorLib/: CMakeLists.txt  allocator.cpp  allocator.h  constants.h  cpu.cpp  cpu.h  dynarec.cpp  dynarec.h  emitter.cpp  emitter.h  emulator.cpp  emulator.h  globalallocator.cpp  globalallocator.h  gpu.cpp  gpu.h  instruction.cpp  instruction.h  interpreter.cpp  interpreter.h  localallocator.cpp  localallocator.h  memoryarena.cpp  memoryarena.h  spu.cpp  spu.h  utils.h
src/EmulatorTests/: CMakeLists.txt  cpu_tests.cpp  cpu_tests.h  dynarec_tests.cpp  emulator_demos.cpp  emulator_demos.h  emulator_tests.cpp  emulator_tests.h  gpu_tests.cpp  gpu_tests.h  interpreter_tests.cpp  interpreter_tests.h  main.cpp  spu_tests.h  utils_tests.cpp
src/Tests/: CMakeLists.txt  cpu_tests.cpp  cpu_tests.h  emulator_tests.cpp  emulator_tests.h  gpu_tests.cpp  gpu_tests.h  spu_tests.cpp  spu_tests.h  utils_tests.cpp
src/Utils/: CMakeLists.txt  utils.h
